# Multi-Modal-Few-shot-Learning

./: .gitignore  0940.py  README.md  pyproject.toml  requirements.txt
src/models/: clip_fewshot.py
src/utils/: core.py
